# web-scrapper

./: .gitignore  README.md  pyproject.toml
candidate/: enricher.py  parsers.py  scraper.py
